--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cobe": "^0.6.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
