--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.5",
     "@tanstack/react-query": "^5.83.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
